creation of form

--- a/app/src/Tasks/styles.module.scss
+++ b/app/src/Tasks/styles.module.scss
@@ -17,3 +17,16 @@
 .button {
   margin-left: 1rem;
 }
+.card-wrapper{
+  display:inline;
+}
+.top{
+  background-color: #DB4F70;
+  height: 75px;
+  width: 150px;
+}
+.card{
+  border: solid 1px black;
+  width: 150px;
+  height:150px;
+}
