changes to css naming of card colors and hex codes

--- a/app/src/Tasks/cards.css
+++ b/app/src/Tasks/cards.css
@@ -17,67 +17,67 @@ color:transparent;
     margin: auto 0;
     justify-content: center;
   }
-  .top1{
+  .top2011{
     background-color: #CF5476;
     height: 75px;
     width: 98px;
   }
-  .top2{
+  .top2012{
     background-color: #DD4124;
     height: 75px;
     width: 98px;
   }
-  .top3{
+  .top2013{
     background-color: #009B77;
     height: 75px;
     width: 98px;
   }
-  .top4{
+  .top2014{
     background-color: #B163A3;
     height: 75px;
     width: 98px;
   }
-  .top5{
+  .top2015{
     background-color: #97504C;
     height: 75px;
     width: 98px;
   }
-  .top6{
+  .top2016_1{
     background-color: #B3CEE5;
     height: 75px;
     width: 98px;
   }
-  .top7{
+  .top2016_2{
     background-color: #f7cac9;
     height: 75px;
     width: 98px;
   }
-  .top8{
+  .top2017{
     background-color: #88B04B;
     height: 75px;
     width: 98px;
   }
-  .top9{
+  .top2018{
     background-color: #604c8d;
     height: 75px;
     width: 98px;
   }
-  .top10{
+  .top2019{
     background-color: #ff6f61;
     height: 75px;
     width: 98px;
   }
-  .top11{
+  .top2020{
     background-color: #34558b;
     height: 75px;
     width: 98px;
   }
-  .top12{
+  .top2021_1{
     background-color: #959A9C;
     height: 75px;
     width: 98px;
   }
-  .top13{
+  .top2021_2{
     background-color: #F5DF4D;
     height: 75px;
     width: 98px;
