--- a/app/src/Tasks/index.css
+++ b/app/src/Tasks/index.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Limelight&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rouge+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100&display=swap');
 
 body{
     background-color:#BDBBBB ;
@@ -8,8 +10,9 @@ body{
     margin: auto 0;
     font-family:'Limelight', cursive;
     font-size: 100px;
-    color:transparent;
-    -webkit-text-stroke: .2px #FFF;
+    color:#FFF;
+    -webkit-text-stroke: .2px #000;
+    opacity: .9;
 }
 
 .card-wrapper{
@@ -74,7 +77,60 @@ body{
       font-size: 10px;
       background-color: #FFF;
   }
-  .pride_form{
-    margin: auto 0;
+  .convo-wrapper{
+    margin: 10px auto;
     justify-content: center;
+    text-align: center;
+    width: 350px;
+    height: 300px;
+    background-color: #FFF;
+    padding: 30px;
+    border-radius: 10px;
+    opacity: .9;
+    border: solid 1px black;
   }
+  #convo-title{
+    font-family: 'Rouge Script', cursive;
+    font-size: 40px;
+    margin: 0px
+  }
+  #convo-paragraph{
+    font-family: 'Josefin Sans', sans-serif;
+  }
+  #convo-button{
+  background-color: #000;
+  color:#FFF;
+  font-size: 20px;
+  font-family:'Limelight', cursive;
+  width:200px;
+  }
+  .pride_form{
+    justify-content: center;
+    padding: 25px;
+  }
+.form-wrapper{
+  display: flex;
+  text-align: center;
+  margin: auto;
+  justify-content:center;
+  background-color: #FFF;
+  width: 350px; 
+  height: 350px;
+  border-radius: 10px;
+  opacity: .9;
+  border: solid 1px black;
+}
+#form-title{
+  font-family: 'Rouge Script', cursive;
+  font-size: 40px;
+  margin: 0px
+}
+label{
+  font-family: 'Josefin Sans', sans-serif;
+}
+#form-submit{
+  background-color: #000;
+  color:#FFF;
+  font-size: 30px;
+  font-family:'Limelight', cursive;
+}
