--- a/app/src/Tasks/index.css
+++ b/app/src/Tasks/index.css
@@ -21,6 +21,10 @@ body {
   justify-content: center;
 }
 
+.card-button{
+  background-color: transparent;
+  border: transparent;
+}
 #cardDimension {
   height: 75px;
   width: 98px;
@@ -134,38 +138,6 @@ label {
   font-size: 30px;
   font-family: "Limelight", cursive;
 }
-/* .carousel-inner.item {
-  height: 500px;
-  width: auto;
-}
-
-.item {
-  border-radius: 30px;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  margin: 0 auto;
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  height: 300px;
-  width: 300px;
-}
-
-.album {
-  margin: 0 auto;
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.carousel-caption {
-  color: #fd7cf7;
-} */
 
 .db_left_side_card{
   width: 350px;
