API color cards formatted

--- a/app/src/Tasks/index.css
+++ b/app/src/Tasks/index.css
@@ -206,24 +206,17 @@ label {
 }
 
 .API_card_wrapper{
-  display: inline-flex;
-  margin: auto;
+  display:flex;
+  margin: auto 0;
   justify-content: center;
-  text-align: center;
-  margin: auto;
-  margin-top: 30px;
   align-items: center;
 }
 .API_card{
-  display: inline-flex;
-  justify-content: center;
   border: solid 1px black;
   width: 100px;
   height: 125px;
-  margin: auto 10px;
+  margin: 5px;
   background-color: #fff;
-  text-align: center;
-  align-items: center;
 }
 
 @media only screen and (max-width: 768px) {
