--- a/app/src/Tasks/index.css
+++ b/app/src/Tasks/index.css
@@ -24,6 +24,7 @@ body {
 .card-button{
   background-color: transparent;
   border: transparent;
+  cursor: pointer;
 }
 #cardDimension {
   height: 75px;
@@ -203,14 +204,44 @@ label {
   margin: auto;
   justify-content: center;
   border: solid 1px #FFF;
+  cursor: pointer;
 }
 
-.API_card_wrapper{
-  display:flex;
-  margin: auto 0;
+.API_wrapper-wrapper{
+  text-align: center;
+  margin-top: 15px;
+  margin: 15px auto;
+  display: inline-flex;
   justify-content: center;
   align-items: center;
 }
+
+/* .API_card_wrapper{
+  text-align: center;
+  margin-top: 15px;
+  margin: 15px auto;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+} */
+
+.API_card_wrapper{
+  display: grid;
+  margin: auto 0px;
+  margin-top: 30px;
+  padding: 0px;
+  grid-template-columns: 170px;
+  grid-template-rows: 50px 50px 50px 50px 50px;
+  justify-items: center;
+  align-items: center;
+  justify-content: center;
+}
+
+#API_card_dimension{
+  height: 75px;
+  width: 98px;
+}
+
 .API_card{
   border: solid 1px black;
   width: 100px;
@@ -386,5 +417,39 @@ label {
   margin: auto;
   justify-content: center;
   border: solid 1px #FFF;
+}
+}
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+.API_card_wrapper{
+  display: grid;
+  margin: auto 15px;
+  margin-top: 30px;
+  padding: 0px;
+  grid-template-columns: 25px 25px;
+  grid-template-rows: 50px 50px;
+  justify-items: center;
+  align-items: center;
+  justify-content: center;
+}
+}
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+.API_card{
+  border: solid 1px black;
+  width: 75px;
+  height: 100px;
+  margin: 5px;
+  background-color: #fff;
+}
+}
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+#API_card_dimension{
+  height: 60px;
+  width: 73px;
 }
 }
