--- a/app/src/Tasks/index.css
+++ b/app/src/Tasks/index.css
@@ -211,7 +211,7 @@ label {
   text-align: center;
   margin-top: 15px;
   margin: 15px auto;
-  display: inline-flex;
+  display: flex;
   justify-content: center;
   align-items: center;
 }
