--- a/app/src/Tasks/index.css
+++ b/app/src/Tasks/index.css
@@ -2,6 +2,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Rouge+Script&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100&display=swap");
 
+*{
+  margin-right: -50px;
+}
+
 body {
   background-color: #bdbbbb;
 }
@@ -276,18 +280,19 @@ a:visited {
   cursor: pointer;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 860px) {
   /* For mobile phones: */
   .title {
     text-align: center;
     margin: auto;
+    margin-top: -25px;
     font-family: "Limelight", cursive;
     font-size: 40px;
     color: #fff;
     -webkit-text-stroke: 0.2px #000;
   }
 }
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 860px) {
   /* For mobile phones: */
 .card-wrapper {
   display: grid;
@@ -300,7 +305,7 @@ a:visited {
 }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 860px) {
   /* For mobile phones: */
 #cardDimension {
   height: 100px;
@@ -308,7 +313,7 @@ a:visited {
 }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 860px) {
   /* For mobile phones: */
 .card {
   border: solid 1px black;
@@ -319,7 +324,7 @@ a:visited {
 }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 860px) {
   /* For mobile phones: */
 #extra-card {
   justify-content: center;
@@ -329,7 +334,7 @@ a:visited {
 }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 860px) {
   /* For mobile phones: */
 .convo-wrapper {
   margin: 10px auto;
@@ -346,7 +351,7 @@ a:visited {
 }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 860px) {
   /* For mobile phones: */
   #convo-title {
     font-family: "Rouge Script", cursive;
@@ -355,7 +360,7 @@ a:visited {
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 860px) {
   /* For mobile phones: */
 #convo-paragraph {
   font-family: "Josefin Sans", sans-serif;
@@ -363,7 +368,7 @@ a:visited {
 }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 860px) {
   /* For mobile phones: */
 #convo-button {
   background-color: #000;
@@ -374,7 +379,7 @@ a:visited {
 }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 860px) {
   /* For mobile phones: */
 .db_card_div {
   background-color: #000;
@@ -388,7 +393,7 @@ a:visited {
 }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 860px) {
   /* For mobile phones: */
 .db_color_name {
   display: flex;
@@ -399,7 +404,7 @@ a:visited {
 }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 860px) {
   /* For mobile phones: */
 .db_release_year {
   display: inline-block;
@@ -410,7 +415,7 @@ a:visited {
 }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 860px) {
   /* For mobile phones: */
 .db_image_description {
   display: inline-block;
@@ -421,7 +426,7 @@ a:visited {
 }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 860px) {
   /* For mobile phones: */
 .db_instagram_handle{
   display: inline-block;
@@ -431,7 +436,7 @@ a:visited {
 }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 860px) {
   /* For mobile phones: */
 .db_image{
   display: flex;
@@ -441,7 +446,7 @@ a:visited {
 }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 860px) {
   /* For mobile phones: */
 .react-3d-carousel{
  height: 10px;
@@ -449,7 +454,7 @@ a:visited {
 }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 860px) {
   /* For mobile phones: */
 .fetch-API-button{
   background-color: #000;
@@ -464,7 +469,7 @@ a:visited {
 }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 860px) {
   /* For mobile phones: */
 .API-instruction{
   background-color: #fff;
@@ -483,7 +488,7 @@ a:visited {
 }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 860px) {
   /* For mobile phones: */
 .API_card_wrapper-wrapper{
   text-align: center;
@@ -495,7 +500,7 @@ a:visited {
 }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 860px) {
   /* For mobile phones: */
 .API_card_wrapper{
   text-align: center;
@@ -507,7 +512,7 @@ a:visited {
 }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 860px) {
   /* For mobile phones: */
 .API_card{
   border: solid 1px black;
@@ -518,7 +523,7 @@ a:visited {
 }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 860px) {
   /* For mobile phones: */
 #API_card_dimension{
   height: 60px;
