--- a/app/src/Tasks/index.css
+++ b/app/src/Tasks/index.css
@@ -19,6 +19,16 @@ body {
   -webkit-text-stroke: 0.2px #000;
 }
 
+.subtitle{
+  text-align: center;
+  margin: auto 0;
+  margin-bottom: 30px;
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 20px;
+  font-weight: bolder;
+  color: #000;
+}
+
 .card-wrapper {
   display: flex;
   margin: auto 0;
@@ -278,6 +288,7 @@ a:visited {
 
 .API-card-button{
   cursor: pointer;
+  border: transparent;
 }
 
 @media only screen and (max-width: 1500px) {
@@ -292,6 +303,21 @@ a:visited {
     -webkit-text-stroke: 0.2px #000;
   }
 }
+
+@media only screen and (max-width: 1500px) {
+  /* For mobile phones: */
+.subtitle{
+  text-align: center;
+  margin: auto 10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 15px;
+  font-weight: bolder;
+  color: #000;
+}
+}
+
 @media only screen and (max-width: 1500px) {
   /* For mobile phones: */
 .card-wrapper {
